--- a/discovering.css
+++ b/discovering.css
@@ -53,7 +53,7 @@
     background-color: #F0F0F0;    
   }
 
-.material-icon
+.material-icons
 {
     font-size: 15pt;
     color: white;
@@ -69,6 +69,7 @@
     color: white;
     font-family: Serif;
 }
+
   @media only screen and (max-width : 500px) and (max-height : 900px)
   {
     lili
