--- a/discovering.css
+++ b/discovering.css
@@ -2,8 +2,7 @@
   .momo          //logo
   {
     text-align: center; 
-    font-size: 14pt;  
-    
+    font-size: 14pt;     
   }
   .lili      //bannière
   {
@@ -58,7 +57,6 @@
     font-size: 15pt;
     color: white;
 }
-
 .alert
 {
     line-height: normal;
@@ -69,7 +67,10 @@
     color: white;
     font-family: Serif;
 }
-
+.tableau  //tableau des prix.
+{
+  color: black;
+}
   @media only screen and (max-width : 500px) and (max-height : 900px)
   {
     lili
